<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_favourites"
        android:orderInCategory="30"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/action_favourites"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="40"
        android:title="@string/contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="50"
        android:icon="@drawable/share"
        app:showAsAction="always"
        android:title="share" />
    <item
        android:id="@+id/shopping"
        app:showAsAction="always"
        android:icon="@drawable/shopping_cart"
        android:title="shopping"/>

</menu>