<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="27dp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="132dp"
                android:layout_height="78dp"
                android:gravity="left"
                android:text="@string/name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="297dp"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/enter_your_name_here"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_address"
                android:layout_width="132dp"
                android:layout_height="78dp"
                android:gravity="left"
                android:text="@string/address"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="297dp"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="textMultiLine" />
        </LinearLayout>
        <Spinner
            android:id="@+id/labels_spinner"
            android:layout_width="193dp"
            android:layout_height="57dp"
            android:layout_gravity="right"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="132dp"
                android:layout_height="78dp"
                android:gravity="left"
                android:text="@string/phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="297dp"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="phone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_note"
                android:layout_width="132dp"
                android:layout_height="78dp"
                android:gravity="left"
                android:text="@string/note"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_note"
                android:layout_width="297dp"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/enter_note"
                android:inputType="textMultiLine" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_day"
                android:textSize="18dp"
                android:onClick="onRadioClick"/>

            <RadioButton
                android:id="@+id/radio_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_day"
                android:checked="true"
                android:textSize="18dp"
                android:onClick="onRadioClick"/>

            <RadioButton
                android:id="@+id/radio_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up"
                android:textSize="18dp"
                android:onClick="onRadioClick"/>
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>